# mergr

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/actions/setup-pdm-env/: action.yaml
.github/workflows/: make-release.yaml  test-codebase.yaml
mergr/: _version.py  merger.py
tests/: mergers.py  test_merger.py  test_merger_dataclasses.py  test_merger_mappings.py
