[project]
name = "mergr"
dynamic = ["version"]
description = "Objects merging utility"
authors = [{ name = "alxevvv", email = "alxevvv@gmail.com" }]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["python"]

[tool.pdm.version]
source = "scm"
write_to = "mergr/_version.py"
write_template = "__version__ = \"{}\"\n"

[tool.pdm.dev-dependencies]
dev = [
    "covdefaults>=2.3.0",
    "deptry>=0.16.1",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    "pytest-emoji>=0.2.0",
    "ruff>=0.4.5",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "."
includes = ["mergr/"]
excludes = ["./**/.git"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
